# sierra

./: .coveragerc  .dir-locals.el  .gitignore  .gitmodules  .projectile  .pylintrc  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  Thinking.py  __init__.py  backtrace3560035  backtrace3566962  base_graph_generator.py  batch_criteria.py  batch_utils.py  batched_exp_csv_averager.py  batched_exp_input_generator.py  batched_exp_runner.py  batched_intra_exp_graph_generator.py  cmdline.py  constant-density-template.argos  csv_averager.py  csv_class.py  csv_collator.py  exp_csv_averager.py  exp_input_generator.py  exp_pipeline.py  exp_runner.py  experiment_input_generator.py  experiment_pipeline.py  experiment_runner.py  generator_creator.py  generator_pair_parser.py  ideal-template.argos  inter_exp_graph_generator.py  intra_exp_graph_generator.py  (+18 more)
Generated XML Files/: single-source_0.argos  single-source_1.argos  single-source_2.argos  single-source_3.argos  single-source_4.argos
Sample XML Files/: new-single-source-test.argos  quick-new-single-source-test.argos  single-source-test.argos  single-source.argos
batch_criteria/: __init__.py  arena_size.py  base_criteria.py  swarm_size.py  task_allocation.py
config/: controllers.yaml  inter-graphs-line.yaml  intra-graphs-hm.yaml  intra-graphs-line.yaml  main.yaml  stage5.yaml
core/: __init__.py  cmdline.py  config.py  experiment_spec.py  hpc.py  plugin_manager.py  root_dirpath_generator.py  stat_kernels.py  utils.py  vector.py  xml_luigi.py
depth0/: stateless_input_generator.py
docs/: CONTRIBUTING.md  Makefile  conf.py  contributing.rst  faq.rst  glossary.rst  index.rst  pyproject-man.txt  requirements.txt  trial.rst
exp_variables/: __init__.py  arena_shape.py  base_variable.py  block_distribution.py  block_priority.py  nest_pose.py  setup.py  swarm_density.py  swarm_size.py  temporal_variance.py  time_setup.py
experiments/: stateful.py  stateless.py
generators/: __init__.py  base_scenario_generator.py  batched_exp_input_generator.py  controller_generator_parser.py  depth0.py  depth1.py  depth2.py  dual_source.py  exp_creator.py  exp_generator.py  exp_input_generator.py  factory.py  generator_creator.py  generator_factory.py  generator_pair_parser.py  powerlaw.py  quad_source.py  random.py  scenario_generator_parser.py  single_source.py  stateful.py  stateless.py
graphs/: __init__.py  bar_graph.py  batch_ranged_graph.py  ca_graphs.py  comparison_graph.py  heatmap.py  histogram.py  ranged_size_graph.py  scalability_graph.py  stacked_line_graph.py  stacked_surface_graph.py
models/: collision_avoidance.py  execution_record.py  footbot.py  interface.py  model.py
perf_measures/: __init__.py  adaptability.py  block_collection.py  collection.py  common.py  controller_comp.py  emergence.py  heatmaps.py  reactivity.py  scalability.py  scalability_bivar.py  scalability_univar.py  self_organization.py  utils.py  vcs.py
pipeline/: __init__.py  batched_exp_csv_averager.py  batched_exp_input_generator.py  batched_exp_runner.py  batched_exp_video_renderer.py  batched_intra_exp_graph_generator.py  csv_class.py  csv_collator.py  exp_csv_averager.py  exp_pipeline.py  exp_runner.py  exp_video_renderer.py  histogram_generator.py  inter_batch_comparator.py  inter_exp_graph_generator.py  inter_exp_heatmaps.py  inter_exp_linegraphs.py  inter_exp_targets.py  intra_exp_graph_generator.py  intra_exp_heatmaps.py  intra_exp_histograms.py  intra_exp_linegraphs.py  intra_exp_targets.py  linegraph_generator.py  pipeline.py  root_dirpath_generator.py  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py  temporal_variance_plot_defs.py  univar_csv_collator.py  xml_luigi.py
plugins2/: fordyca  silicon
requirements/: common.txt  docs.txt
sample-csv-files/: bas0.csv
sample-xml-files/: new-single-source.argos  randomized.argos
scripts/: 2019-ijcai-ideal.pbs  2019-ijcai-robot-exhibition.pbs  2019-ijcai-tv.pbs  2020-aamas-cleanup.sh  2020-aamas-depth0-size1024-constant-density1.pbs  2020-aamas-depth0-size1024-constant-density10.pbs  2020-aamas-depth0-size1024-sdensity1-bdensity1-ideal.pbs  2020-aamas-depth0-size1024-sdensity10-bdensity10-ideal.pbs  2020-aamas-depth0-size1024-sdensity10-bdensity10-oracle-all.pbs  2020-aamas-depth0-size1024-sdensity10-bdensity10.pbs  2020-aamas-depth0-size1024-var-density10-oracle-all.pbs  2020-aamas-depth0-size1024-var-density10.pbs  2020-aamas-depth1-size1024-constant-density1.pbs  2020-aamas-depth1-size1024-constant-density10-ideal.pbs  2020-aamas-depth1-size1024-constant-density10-oracle-tasks.pbs  2020-aamas-depth1-size1024-constant-density10.pbs  2020-aamas-depth1-size1024-sdensity1-bdensity1-ideal.pbs  2020-aamas-depth1-size1024-sdensity10-bdensity10-ideal.pbs  2020-aamas-depth1-size1024-sdensity10-bdensity10-oracle-all.pbs  2020-aamas-depth1-size1024-sdensity10-bdensity10-oracle-tasks.pbs  2020-aamas-depth1-size1024-sdensity10-bdensity10.pbs  2020-aamas-depth1-size1024-var-density10-ideal.pbs  2020-aamas-depth2-size1024-constant-density1.pbs  2020-aamas-depth2-size1024-constant-density10-ideal.pbs  2020-aamas-depth2-size1024-constant-density10-oracle-tasks.pbs  2020-aamas-depth2-size1024-constant-density10.pbs  2020-aamas-depth2-size1024-sdensity1-bdensity1-ideal.pbs  2020-aamas-depth2-size1024-sdensity10-bdensity10-ideal.pbs  2020-aamas-depth2-size1024-sdensity10-bdensity10.pbs  2020-aamas-depth2-size1024-var-density10-oracle-all.pbs  2020-aamas-depth2-size1024-var-density10-oracle-tasks.pbs  2020-aamas-depth2-size1024-var-density10.pbs  2020-aamas_initial.pbs  2020-arms-depth0-var-density10-saa-noise-uniform.pbs  2020-arms-depth1-var-density10-saa-noise-uniform.pbs  2020-arms-depth2-var-density10-saa-noise-uniform.pbs  2020-arms.sh  2020-journal-sc1.pbs  2020-journal-sc2.pbs  2020-journal-sc3.pbs  (+32 more)
sierra/: __init__.py  main.py  version.py
templates/: 2020-aamas-depth0-ideal.argos  2020-aamas-depth0-oracle-all.argos  2020-aamas-depth1-ideal.argos  2020-aamas-depth1-oracle-tasks.argos  2020-aamas-depth1-oracle.argos  2020-aamas-depth2-ideal.argos  2020-arms-pd.argos  tv.argos  (+21 more)
(+955 files in other folders)
